sales-scorecard-api/infrastructure-backups/20250915_125638/security-group.json
{
    "SecurityGroups": [
        {
            "GroupId": "sg-023ad82910d10d4ef",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow all outbound traffic",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0a31ab81dafef4473",
            "SecurityGroupArn": "arn:aws:ec2:eu-north-1:221855463690:security-group/sg-023ad82910d10d4ef",
            "OwnerId": "221855463690",
            "GroupName": "sales-scorecard-alb-sg",
            "Description": "Security group for Sales Scorecard Application Load Balancer",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 80,
                    "ToPort": 80,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow HTTP traffic from anywhere",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                },
                {
                    "IpProtocol": "tcp",
                    "FromPort": 443,
                    "ToPort": 443,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "Description": "Allow HTTPS traffic from anywhere",
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
